Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.0.RC2
Date:
----------------------------------

Changes/New Features:

Bug Fixes:

CAY-2436 NPE in CayenneRuntimeException constructor

----------------------------------
Release: 4.0.RC1
Date: April 25, 2018
----------------------------------

Changes/New Features:

CAY-2414 Modeler: new icon design

Bug Fixes:

CAY-2253 Cayenne JDK9 compatibility
CAY-2361 PostgreSQL DbGenerator issues
CAY-2364 Wrong logging in SQLTemplate
CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
CAY-2367 ClassCastException reading object with an attribute of type 'char'
CAY-2368 ColumnSelect: Property.self() translates into wrong SQL code
CAY-2370 ValueObjectType for byte[] fails lookup
CAY-2382 Lack of synchronization in DataContext serialization
CAY-2387 Can't select byte[] property with ColumnSelect
CAY-2388 Modeler: Visualization issues with undo/redo actions for attributes and relationships
CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
CAY-2392 Modeler: Unable to remove DataNode
CAY-2401 Modeler: NPE in ObjEntity sync action
CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type
CAY-2411 Wrong resolution of ExtendedType with ValueObjectType for inherited class
CAY-2420 Modeler: search is not performed for Stored Procedures
CAY-2429 Generate classes: Invalid template type: EMBEDDABLE_SINGLE_CLASS

----------------------------------
Release: 4.0.B2
Date: October 06, 2017
----------------------------------

Bug Fixes:

CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects
CAY-2321 cdbimport: Reverse relationship is not created after adding and rev engineeering new db table