@@ -16,6 +16,7 @@ Changes/New Features:
 
 Bug Fixes:
 
+CAY-2435 cdbimport: procedure parameters are not imported
 CAY-2436 NPE in CayenneRuntimeException constructor
 
 ----------------------------------
